objects/TracRTC__ReRun_Complete_Criteria__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds criteria configurations for the re-run complete settings section of complete</description>
    <fields>
        <fullName>TracRTC__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Is_On_Create_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is On Create Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__SObject_Name__c</fullName>
        <label>SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ReRun Complete Criteria</label>
</CustomObject>